# IDP_E_3

./: README.md  app.py  export_figures.py  main.py  pyproject.toml  run_dl.py
results/: adf_results.csv  adf_results.pkl  forecasts_all.pkl  irf_all.pkl  lagged_df.pkl  models_all.pkl  performance_all.pkl  performance_summary.csv
results/diagnostics/: aic_bic_comparison.csv
results/diagnostics/A/: acf_pacf_free_cash_flow.csv  correlation_liquidity.csv  covariance_liquidity.csv  manifest.json
results/diagnostics/B/: acf_pacf_free_cash_flow.csv  correlation_liquidity.csv  covariance_liquidity.csv  manifest.json
results/diagnostics/C/: acf_pacf_free_cash_flow.csv  correlation_liquidity.csv  covariance_liquidity.csv  manifest.json
results/diagnostics/D/: acf_pacf_free_cash_flow.csv  correlation_liquidity.csv  covariance_liquidity.csv  manifest.json
results/diagnostics/E/: manifest.json  (+3 more)
results/dl/: A_gru.pkl  A_lstm.pkl  A_nbeats.pkl  A_prophet.pkl  B_gru.pkl  B_lstm.pkl  B_nbeats.pkl  B_prophet.pkl  C_gru.pkl  C_lstm.pkl  C_nbeats.pkl  C_prophet.pkl  D_gru.pkl  D_lstm.pkl  D_nbeats.pkl  D_prophet.pkl  E_gru.pkl  E_lstm.pkl  E_nbeats.pkl  E_prophet.pkl  F_gru.pkl  F_lstm.pkl  F_nbeats.pkl  F_prophet.pkl  G_gru.pkl  G_lstm.pkl  G_nbeats.pkl  G_prophet.pkl  H_gru.pkl  H_lstm.pkl  H_nbeats.pkl  H_prophet.pkl  I_gru.pkl  I_lstm.pkl  I_nbeats.pkl  I_prophet.pkl  J_gru.pkl  J_lstm.pkl  J_nbeats.pkl  J_prophet.pkl  (+36 more)
src/: adf_tests.py  data_pipeline.py  deep_learning.py  diagnostics.py  evaluation.py  factor_models.py  forecasting.py  utils.py  var_analysis.py
(+289 files in other folders)
