[project]
name = "week3-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bokeh==2.4.3",
    "datasets>=4.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy<2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pmdarima>=2.0.4",
    "polars>=1.36.1",
    "prophet>=1.3.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.50.0",
    "tensorboard>=2.18.0",
    "tensorflow>=2.18.1",
]
